--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.tinkofflab2023"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -63,9 +63,11 @@ dependencies {
 
     // region Utils
     implementation 'com.jakewharton.timber:timber:5.0.1'
+    //cicerone
     implementation "com.github.terrakok:cicerone:7.1"
-    //todo - надо ли?
-    implementation 'io.coil-kt:coil:2.2.2'
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.15.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
     // endregion
 
     testImplementation 'junit:junit:4.13.2'
