--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.tinkofflab2023"
-        minSdk 23
+        minSdk 24
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -32,10 +32,13 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+
     }
 }
 
+
 dependencies {
+    //implementation "com.androidx.support:support-core-utils:28.0.0"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     implementation 'androidx.core:core-ktx:1.9.0'
