--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 java {
@@ -41,6 +42,11 @@ android {
 
     }
     namespace 'com.example.tinkofflab2023'
+
+}
+
+kapt {
+    correctErrorTypes true
 }
 
 
@@ -54,14 +60,19 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
+    // region Dagger Hilt
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+    // endregion
 
-    // livedata
+    // region Livedata and Flow
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    // endregion
 
     // region Room
     def room = '2.5.1'
@@ -89,7 +100,7 @@ dependencies {
     implementation "com.github.terrakok:cicerone:7.1"
     //glide
     implementation 'com.github.bumptech.glide:glide:4.15.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
+    kapt 'com.github.bumptech.glide:compiler:4.15.0'
     // endregion
 
     testImplementation 'junit:junit:4.13.2'
