--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,6 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.5.7"
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.core:core-ktx:+'
 
     // region Dagger Hilt'
     def hilt = '2.44'
@@ -104,6 +103,8 @@ dependencies {
     //glide
     implementation 'com.github.bumptech.glide:glide:4.15.0'
     kapt 'com.github.bumptech.glide:compiler:4.15.0'
+    //todo потестить скорость
+    //implementation "com.github.bumptech.glide:okhttp3-integration:4.11.0"
     // endregion
 
     testImplementation 'junit:junit:4.13.2'
