--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,10 +52,12 @@ kapt {
 
 
 dependencies {
+    implementation("com.squareup:javapoet:1.13.0")
+
     //implementation "com.androidx.support:support-core-utils:28.0.0"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation "androidx.fragment:fragment-ktx:1.5.7"
     implementation 'com.google.android.material:material:1.9.0'
